cambiando titulo de documento

--- a/demo.html
+++ b/demo.html
@@ -10,7 +10,7 @@
 	});</script>
 </head>
 <body>
-<h1>Mapa politico de Bolivia </h1>
+<h1>Mapa político de Bolivia </h1>
 
 <img class="map" src="image/map-of-bolivia-politico.jpg" width="550" height="643" usemap="#bolivia">
 <map name="bolivia">
